--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>My Simple Blog</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/blog.css" rel="stylesheet">
+    <link href="static/css/blog.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -18,14 +18,14 @@
             <h2 class="blog-post-title">첫 번째 포스트</h2>
             <p class="blog-post-meta">2025년 4월 10일 • by Geonwoo</p>
             <p>이 글은 GitHub Pages와 Bootstrap Blog 템플릿을 사용해서 만든 예시 블로그입니다.</p>
-            <a href="#" class="btn btn-sm btn-outline-primary">더보기</a>
+            <a href="posts/post1.html" class="btn btn-sm btn-outline-primary">더보기</a>
           </article>
           <hr>
           <article class="blog-post">
             <h2 class="blog-post-title">두 번째 이야기</h2>
             <p class="blog-post-meta">2025년 4월 9일 • by Geonwoo</p>
             <p>HTML, CSS, JS만으로도 충분히 멋진 블로그를 만들 수 있습니다.</p>
-            <a href="#" class="btn btn-sm btn-outline-primary">더보기</a>
+            <a href="posts/post2.html" class="btn btn-sm btn-outline-primary">더보기</a>
           </article>
         </div>
 
