update web page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <div class="container">
       <header class="py-3 mb-4 border-bottom">
         <h1 class="text-center">My Tech Blog</h1>
+        <nav class="text-center">
+          <a href="index.html" class="mx-2">Home</a>
+          <a href="about.html" class="mx-2">About</a>
+          <a href="contact.html" class="mx-2">Contact</a>
+        </nav>
       </header>
 
       <div class="row g-5">
