--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <header class="py-3 mb-4 border-bottom">
-        <h1 class="text-center">My Tech Blog</h1>
+        <h1 class="text-center">Example Blog</h1>
         <nav class="text-center">
           <a href="index.html" class="mx-2">Home</a>
           <a href="about.html" class="mx-2">About</a>
@@ -20,16 +20,16 @@
       <div class="row g-5">
         <div class="col-md-8">
           <article class="blog-post">
-            <h2 class="blog-post-title">첫 번째 포스트</h2>
-            <p class="blog-post-meta">2025년 4월 10일 • by Geonwoo</p>
-            <p>이 글은 GitHub Pages와 Bootstrap Blog 템플릿을 사용해서 만든 예시 블로그입니다.</p>
+            <h2 class="blog-post-title">첫 번째 포스팅</h2>
+            <p class="blog-post-meta">2025년 4월 10일</p>
+            <p>이 글은 GitHub Pages와 Bootstrap을 사용해서 만든 예시 블로그입니다.</p>
             <a href="posts/post1.html" class="btn btn-sm btn-outline-primary">더보기</a>
           </article>
           <hr>
           <article class="blog-post">
-            <h2 class="blog-post-title">두 번째 이야기</h2>
-            <p class="blog-post-meta">2025년 4월 9일 • by Geonwoo</p>
-            <p>HTML, CSS, JS만으로도 충분히 멋진 블로그를 만들 수 있습니다.</p>
+            <h2 class="blog-post-title">두 번째 포스팅</h2>
+            <p class="blog-post-meta">2025년 4월 9일</p>
+            <p>HTML, CSS, JS만으로도 웹 페이지를 만들 수 있습니다.</p>
             <a href="posts/post2.html" class="btn btn-sm btn-outline-primary">더보기</a>
           </article>
         </div>
@@ -38,7 +38,7 @@
           <div class="position-sticky" style="top: 2rem;">
             <div class="p-4 mb-3 bg-light rounded">
               <h4>소개</h4>
-              <p>이 블로그는 간단한 기술 글을 아카이빙하는 공간입니다.</p>
+              <p>이 페이지는 간단한 예시를 보여주기 위한 공간입니다.</p>
             </div>
 
             <div class="p-4">
@@ -54,7 +54,7 @@
       </div>
 
       <footer class="py-3 my-4 border-top text-center">
-        <p>© 2025 Geonwoo's Blog</p>
+        <p>© 2025 mystelee's Blog</p>
       </footer>
     </div>
   </body>
