--- a/about.html
+++ b/about.html
@@ -1,18 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="utf-8">
     <title>About</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="static/css/blog.css" rel="stylesheet">
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <nav class="mt-3 mb-4">
-            <a href="index.html" class="btn btn-outline-secondary btn-sm">← 홈으로</a>
-        </nav>
-        <h1>About</h1>
-        <p>이 블로그는 웹 개발, 기술, 디자인 등을 주제로 한 콘텐츠를 공유하는 공간입니다.</p>
+      <nav class="mt-3 mb-4">
+        <a href="index.html" class="btn btn-outline-secondary btn-sm">← 홈으로</a>
+      </nav>
+      <h1>About</h1>
+      <p>이 블로그는 Geonwoo가 운영하며, 웹 개발 및 기술 관련 글을 공유하는 공간입니다.</p>
     </div>
-</body>
+  </body>
 </html>
