--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <header class="py-3 mb-4 border-bottom">
-        <h1 class="text-center">My Tech Blog</h1>
+        <h1 class="text-center">My Simple Blog</h1>
         <nav class="text-center">
           <a href="index.html" class="mx-2">Home</a>
           <a href="about.html" class="mx-2">About</a>
