--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/blog/">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
-        <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="static/css/bootstrap.min.css" rel="stylesheet">
 
         <style>
             .bd-placeholder-img {
