--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" data-bs-theme="auto">
     <head>
-        <script src="assets/js/color-modes.js"></script>
+        <script src="/assets/js/color-modes.js"></script>
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,7 +15,7 @@
         <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/blog/">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
-        <link href="assets/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
         <style>
             .bd-placeholder-img {
@@ -101,144 +101,15 @@
             href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap"
             rel="stylesheet">
         <!-- Custom styles for this template -->
-        <link href="blog.css" rel="stylesheet">
+        <link href="/assets/css/blog.css" rel="stylesheet">
     </head>
     <body>
-        <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
-            <symbol id="check2" viewbox="0 0 16 16">
-                <path
-                    d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
-            </symbol>
-            <symbol id="circle-half" viewbox="0 0 16 16">
-                <path d="M8 15A7 7 0 1 0 8 1v14zm0 1A8 8 0 1 1 8 0a8 8 0 0 1 0 16z"/>
-            </symbol>
-            <symbol id="moon-stars-fill" viewbox="0 0 16 16">
-                <path
-                    d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"/>
-                <path
-                    d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"/>
-            </symbol>
-            <symbol id="sun-fill" viewbox="0 0 16 16">
-                <path
-                    d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"/>
-            </symbol>
-        </svg>
-
-        <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
-            <button
-                class="btn btn-bd-primary py-2 dropdown-toggle d-flex align-items-center"
-                id="bd-theme"
-                type="button"
-                aria-expanded="false"
-                data-bs-toggle="dropdown"
-                aria-label="Toggle theme (auto)">
-                <svg class="bi my-1 theme-icon-active" width="1em" height="1em">
-                    <use href="#circle-half"></use>
-                </svg>
-                <span class="visually-hidden" id="bd-theme-text">Toggle theme</span>
-            </button>
-            <ul
-                class="dropdown-menu dropdown-menu-end shadow"
-                aria-labelledby="bd-theme-text">
-                <li>
-                    <button
-                        type="button"
-                        class="dropdown-item d-flex align-items-center"
-                        data-bs-theme-value="light"
-                        aria-pressed="false">
-                        <svg class="bi me-2 opacity-50" width="1em" height="1em">
-                            <use href="#sun-fill"></use>
-                        </svg>
-                        Light
-                        <svg class="bi ms-auto d-none" width="1em" height="1em">
-                            <use href="#check2"></use>
-                        </svg>
-                    </button>
-                </li>
-                <li>
-                    <button
-                        type="button"
-                        class="dropdown-item d-flex align-items-center"
-                        data-bs-theme-value="dark"
-                        aria-pressed="false">
-                        <svg class="bi me-2 opacity-50" width="1em" height="1em">
-                            <use href="#moon-stars-fill"></use>
-                        </svg>
-                        Dark
-                        <svg class="bi ms-auto d-none" width="1em" height="1em">
-                            <use href="#check2"></use>
-                        </svg>
-                    </button>
-                </li>
-                <li>
-                    <button
-                        type="button"
-                        class="dropdown-item d-flex align-items-center active"
-                        data-bs-theme-value="auto"
-                        aria-pressed="true">
-                        <svg class="bi me-2 opacity-50" width="1em" height="1em">
-                            <use href="#circle-half"></use>
-                        </svg>
-                        Auto
-                        <svg class="bi ms-auto d-none" width="1em" height="1em">
-                            <use href="#check2"></use>
-                        </svg>
-                    </button>
-                </li>
-            </ul>
-        </div>
-
-        <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
-            <symbol
-                id="aperture"
-                fill="none"
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                viewbox="0 0 24 24">
-                <circle cx="12" cy="12" r="10"/>
-                <path
-                    d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94"/>
-            </symbol>
-            <symbol id="cart" viewbox="0 0 16 16">
-                <path
-                    d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
-            </symbol>
-            <symbol id="chevron-right" viewbox="0 0 16 16">
-                <path
-                    fill-rule="evenodd"
-                    d="M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z"/>
-            </symbol>
-        </svg>
-
-        <div class="container">
-            <header class="border-bottom lh-1 py-3">
-                <div class="row flex-nowrap justify-content-between align-items-center">
-                    <div class="col-4 pt-1"></div>
-                    <div class="col-4 text-center">
-                        <a
-                            class="blog-header-logo text-body-emphasis text-decoration-none"
-                            href="index.html">Easy Programming</a>
-                    </div>
-                    <div class="col-4 d-flex justify-content-end align-items-center"></div>
-                </div>
-            </header>
-
-            <div class="nav-scroller py-1 mb-3 border-bottom">
-                <nav class="nav nav-underline justify-content-between">
-                    <a class="nav-item nav-link link-body-emphasis" href="technology.html">Technology</a>
-                    <a class="nav-item nav-link link-body-emphasis" href="programming.html">Programming</a>
-                    <a class="nav-item nav-link link-body-emphasis" href="life.html">Life</a>
-                    <a class="nav-item nav-link link-body-emphasis" href="travel.html">Travel</a>
-                </nav>
-            </div>
-        </div>
+        <div id="header-placeholder"></div>
 
         <main class="container">
             <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
                 <div class="col-lg-6 px-0">
-                    <h1 class="display-4 fst-italic">Welcome to blog post</h1>
+                    <h1 class="display-4">Welcome to Page</h1>
                     <p class="lead my-3">아래 링크의 인덱싱 필요</p>
                     <p class="lead mb-0">
                         <a href="#" class="text-body-emphasis fw-bold">Continue reading...</a>
@@ -260,7 +131,6 @@
                                 <svg class="bi"><use xlink:href="#chevron-right"/></svg>
                             </a>
                         </div>
-                        <!-- TODO: 썸네일 실제 구현 -->
                         <div class="col-auto d-none d-lg-block">
                             <svg
                                 class="bd-placeholder-img"
@@ -290,7 +160,6 @@
                                 <svg class="bi"><use xlink:href="#chevron-right"/></svg>
                             </a>
                         </div>
-                        <!-- TODO: 썸네일 실제 구현 -->
                         <div class="col-auto d-none d-lg-block">
                             <svg
                                 class="bd-placeholder-img"
@@ -312,7 +181,7 @@
             <div class="row g-5">
                 <div class="col-md-8">
                     <h3 class="pb-4 mb-4 fst-italic border-bottom">
-                        대문글을 단단하게 작성해보자자
+                        대문글을 간단하게 작성해보자자
                     </h3>
 
                     <article class="blog-post">
@@ -346,115 +215,13 @@
 
                 </div>
 
-                <div class="col-md-4">
-                    <div class="position-sticky" style="top: 2rem;">
-                        <div class="p-4 mb-3 bg-body-tertiary rounded">
-                            <h4 class="fst-italic">내비게이션</h4>
-                            <p class="mb-0">어떤 기능을 넣어 볼까?</p>
-                        </div>
-
-                        <div>
-                            <h4 class="fst-italic">Recent posts</h4>
-                            <!-- TODO: 실제 페이지에 대한 링크가 필요함 -->
-                            <!-- TODO: 일단 technology 안에 특정 페이지를 보여주면 어떨까 싶음 -->
-                            <ul class="list-unstyled">
-                                <li>
-                                    <a
-                                        class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top"
-                                        href="technology.html#post1">
-                                        <img src="thumb-tech.jpg" width="96" height="96" alt="Tech post thumbnail">
-                                        <div class="col-lg-8">
-                                            <h6 class="mb-0">Example blog post title</h6>
-                                            <small class="text-body-secondary">January 15, 2024</small>
-                                        </div>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a
-                                        class="d-flex flex-column flex-lg-row gap-3 align-items-start align-items-lg-center py-3 link-body-emphasis text-decoration-none border-top"
-                                        href="programming.html#post2">
-                                        <img
-                                            src="thumb-prog.jpg"
-                                            width="96"
-                                            height="96"
-                                            alt="Programming post thumbnail">
-                                        <div class="col-lg-8">
-                                            <h6 class="mb-0">This is another blog post title</h6>
-                                            <small class="text-body-secondary">January 14, 2024</small>
-                                        </div>
-                                    </a>
-                                </li>
-                            </ul>
-                        </div>
-
-                        <div class="p-4">
-                            <h4 class="fst-italic">Archives</h4>
-                            <div class="accordion" id="archiveAccordion">
-                                <div class="accordion-item">
-                                    <h2 class="accordion-header" id="heading2021">
-                                        <button
-                                            class="accordion-button collapsed"
-                                            type="button"
-                                            data-bs-toggle="collapse"
-                                            data-bs-target="#collapse2021"
-                                            aria-expanded="false"
-                                            aria-controls="collapse2021">
-                                            2021
-                                        </button>
-                                    </h2>
-                                    <div
-                                        id="collapse2021"
-                                        class="accordion-collapse collapse"
-                                        aria-labelledby="heading2021"
-                                        data-bs-parent="#archiveAccordion">
-                                        <div class="accordion-body">
-                                            <ul class="list-unstyled">
-                                                <li>
-                                                    <a href="#">March 2021</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">February 2021</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">January 2021</a>
-                                                </li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="p-4">
-                            <h4 class="fst-italic">Elsewhere</h4>
-                            <ol class="list-unstyled">
-                                <li>
-                                    <a href="#">GitHub</a>
-                                </li>
-                                <li>
-                                    <a href="#">Twitter</a>
-                                </li>
-                                <li>
-                                    <a href="#">Facebook</a>
-                                </li>
-                            </ol>
-                        </div>
-                    </div>
-                </div>
+                <div id="sidebar-placeholder"></div>
             </div>
 
         </main>
-
-        <footer class="py-5 text-center text-body-secondary bg-body-tertiary">
-            <p>Blog template built for
-                <a href="https://getbootstrap.com/">Bootstrap</a>
-                by
-                <a href="https://twitter.com/mdo">@mdo</a>.</p>
-            <p class="mb-0">
-                <a href="#">Back to top</a>
-            </p>
-        </footer>
-        <script src="assets/dist/js/bootstrap.bundle.min.js"></script>
+        <div id="footer-placeholder"></div>        
+        <script src="/assets/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="/assets/js/index.js"></script>
 
     </body>
 </html>
