--- a/index.html
+++ b/index.html
@@ -215,7 +215,9 @@
 
                 </div>
 
-                <div id="sidebar-placeholder"></div>
+                <div class="col-md-4">
+                    <div id="sidebar-placeholder"></div>                   
+                </div>
             </div>
 
         </main>
