--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="description" content="">
         <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/blog/">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
+        <title>ISLP Lab. - Home</title>
 
         <link href="/assets/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -103,6 +104,7 @@
         <main class="container">
             <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
                 <div class="col-lg-6 px-0">
+                    <!-- TODO: 이미지로 변경 -->
                     <h1 class="display-4">Welcome to ISLP Lab.</h1>
                     <p class="lead my-3">Speech, Audio, and Language Processing<br>Aritficial Intelligence and Deep Learning</p>
                 </div>
