update profile and remove dummy data

--- a/people/index.html
+++ b/people/index.html
@@ -109,6 +109,12 @@
                     <h2 class="fw-bold pb-2 text-h2-responsive">Professor</h2>
                     <div id="geonwoo-placeholder"></div>
                     <hr>
+                    <h2 class="fw-bold pb-2 text-h2-responsive">B.S. Students</h2>
+                    <div id="dongho-placeholder" class="mt-3"></div>
+                    <div id="sarang-placeholder" class="mt-3"></div>
+                    <div id="minsik-placeholder" class="mt-3"></div>
+                    <div id="eunseo-placeholder" class="mt-3"></div>
+                    <div id="minju-placeholder" class="mt-3"></div>
 
                 </div>
                 <div class="col-md-4">
