--- a/people/geonwoo.html
+++ b/people/geonwoo.html
@@ -1,12 +1,12 @@
 <div class="row">
     <div class="col-md-5 col-lg-3 col-xl-3 col-xxl-2">
-        <img src="images/geonwoo.jpg" class="card-img-top" alt="geonwoo"></div>
+        <img src="/assets/img/geonwoo.jpg" class="card-img-top" alt="geonwoo"></div>
 
         <div class="col-md-7 col-lg-9 col-xl-9 col-xxl-10">
             <div class="card-body">
                 <h5 class="card-title text-h5-responsive">이 건 우 (Geonwoo Lee, Ph.D)</h5>
                 <ul>
-                    <li class="card-text text-p-responsive">Dept. of AI·SW in Chosun Univ., Assistant Prof. (~ September 2024)</li>
+                    <li class="card-text text-p-responsive">Dept. of AI Software in Chosun Univ., Assistant Prof. (~ September 2024)</li>
                     <li class="card-text text-p-responsive">Office : IT 8111</li>
                     <li class="card-text text-p-responsive">Tel : +82-62-230-7032</li>
                     <li class="card-text text-p-responsive">E-mail : geonwoo@chosun.ac.kr</li>
