--- a/lecture/index.html
+++ b/lecture/index.html
@@ -107,11 +107,41 @@
             <div class="row g-5">
                 <div class="col-md-8">
                     <h2 class="fw-bold pb-2 text-h2-responsive">2025 Spring</h2>
-                    <!-- TODO: 버튼 누르면 확장되는 형태 -->
-                    <!-- 과목 목록이 보임 -->
-                    <!-- 과목 클릭하면 card 형태로 강의 내용이 보이고, pdf를 받을 수 있겠금 -->
-                    <!-- 내용마다 pdf 다운로드 또는 없음 또는 링크 -->
-                    <!-- 위 내용들은 다른 html에서 아래 스크립트를 이용해서 구현 -->
+                    <div class="accordion" id="spring25Accordion">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingSpring25">
+                                <button
+                                    class="accordion-button collapsed"
+                                    type="button"
+                                    data-bs-toggle="collapse"
+                                    data-bs-target="#collapseSpring25"
+                                    aria-expanded="false"
+                                    aria-controls="collapseSpring25">
+                                    2025 Spring Courses
+                                </button>
+                            </h2>
+                            <div
+                                id="collapseSpring25"
+                                class="accordion-collapse collapse"
+                                aria-labelledby="headingSpring25"
+                                data-bs-parent="#spring25Accordion">
+                                <div class="accordion-body">
+                                    <div class="row row-cols-1 row-cols-md-2 g-4">
+                                        <div class="col">
+                                            <div class="card h-100">
+                                                <div class="card-body">
+                                                    <h5 class="card-title">Web Programming</h5>
+                                                    <p class="card-text">Introduction to web programming including HTML, CSS, JS, and python based web framework.</p>
+                                                    <button class="btn btn-sm btn-outline-primary" data-bs-toggle="modal" data-bs-target="#web25Modal">View Materials</button>
+                                                </div>
+                                                
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <div id="spring25-placeholder"></div>
                     <hr>
                     <h2 class="fw-bold pb-2 text-h2-responsive">2024 Fall</h2>
@@ -123,13 +153,13 @@
             </div>
         </main>
 
+        <div id="web-modal-placeholder"></div>
         <div id="footer-placeholder"></div>
         <script src="/assets/dist/js/bootstrap.bundle.min.js"></script>
 
     </body>
     <script src="/assets/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/assets/js/index.js"></script>
-    <script src="/assets/js/people_base.js"></script>
-
+    <script src="/assets/js/lecture_base.js"></script>
 
 </html>
