add lecture list

--- a/lecture/2025_spring/web.html
+++ b/lecture/2025_spring/web.html
@@ -18,10 +18,7 @@
                 <ul class="list-group">
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                         Chapter 0. Syllabus
-                        <a
-                            href="/assets/pdfs/web_ch0.pdf"
-                            class="btn btn-sm btn-outline-primary"
-                            download="download">Download</a>
+                        <button class="btn btn-sm btn-outline-primary" onclick="copyLink('https://clc.chosun.ac.kr/ilos/pf/course/plan_form.acl')">Copy Link</button>
                     </li>
                     <li class="list-group-item d-flex justify-content-between align-items-center">
                         Chapter 1. HTML5 & web programming
