--- a/lecture/index.html
+++ b/lecture/index.html
@@ -204,130 +204,130 @@
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
-
-            <hr>
-
-            <div class="col-md-8">
-                <h2 class="fw-bold pb-2 text-h2-responsive">2024 Fall</h2>
-                <div class="accordion" id="fall24Accordion">
-                    <div class="accordion-item">
-                        <h2 class="accordion-header" id="headingFall24">
-                            <button
-                                class="accordion-button collapsed"
-                                type="button"
-                                data-bs-toggle="collapse"
-                                data-bs-target="#collapseFall24"
-                                aria-expanded="false"
-                                aria-controls="collapseFall24">
-                                2025 Spring Courses
-                            </button>
-                        </h2>
-                        <div
-                            id="collapseFall24"
-                            class="accordion-collapse collapse"
-                            aria-labelledby="headingFall24"
-                            data-bs-parent="#fall24Accordion">
-                            <div class="accordion-body">
-                                <div class="row row-cols-1 row-cols-md-2 g-4">
-                                    <div class="col">
-                                        <div class="card h-100">
-                                            <div class="card-body">
-                                                <h5 class="card-title">Introduction to Artificial Intelligence</h5>
-                                                <p class="card-text">Understanding of classical artificial intelligence
-                                                    concepts, along with hands-on practice and theoretical study of deep neural
-                                                    networks (DNN), convolutional neural networks (CNN), long short-term memory
-                                                    (LSTM), and transformer architectures.</p>
-                                                <button
-                                                    class="btn btn-sm btn-outline-primary"
-                                                    data-bs-toggle="modal"
-                                                    data-bs-target="#aiintro24Modal">View Materials</button>
+                    <hr>
+                    <h2 class="fw-bold pb-2 text-h2-responsive">2024 Fall</h2>
+                    <div class="accordion" id="fall24Accordion">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingFall24">
+                                <button
+                                    class="accordion-button collapsed"
+                                    type="button"
+                                    data-bs-toggle="collapse"
+                                    data-bs-target="#collapseFall24"
+                                    aria-expanded="false"
+                                    aria-controls="collapseFall24">
+                                    2024 Fall Courses
+                                </button>
+                            </h2>
+                            <div
+                                id="collapseFall24"
+                                class="accordion-collapse collapse"
+                                aria-labelledby="headingFall24"
+                                data-bs-parent="#fall24Accordion">
+                                <div class="accordion-body">
+                                    <div class="row row-cols-1 row-cols-md-2 g-4">
+                                        <div class="col">
+                                            <div class="card h-100">
+                                                <div class="card-body">
+                                                    <h5 class="card-title">Introduction to Artificial Intelligence</h5>
+                                                    <p class="card-text">Understanding of classical artificial intelligence
+                                                        concepts, along with hands-on practice and theoretical study of deep neural
+                                                        networks (DNN), convolutional neural networks (CNN), long short-term memory
+                                                        (LSTM), and transformer architectures.</p>
+                                                    <button
+                                                        class="btn btn-sm btn-outline-primary"
+                                                        data-bs-toggle="modal"
+                                                        data-bs-target="#aiintro24Modal">View Materials</button>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
 
-                                    <div class="col">
-                                        <div class="card h-100">
-                                            <div class="card-body">
-                                                <h5 class="card-title">Operation System</h5>
-                                                <p class="card-text">Fundamental understanding of operating systems, including
-                                                    concepts such as threads and multitasking, CPU scheduling, paging and memory
-                                                    management, virtual memory, file systems, and storage devices.</p>
-                                                <button
-                                                    class="btn btn-sm btn-outline-primary"
-                                                    data-bs-toggle="modal"
-                                                    data-bs-target="#os24Modal">View Materials</button>
+                                        <div class="col">
+                                            <div class="card h-100">
+                                                <div class="card-body">
+                                                    <h5 class="card-title">Operation System</h5>
+                                                    <p class="card-text">Fundamental understanding of operating systems, including
+                                                        concepts such as threads and multitasking, CPU scheduling, paging and memory
+                                                        management, virtual memory, file systems, and storage devices.</p>
+                                                    <button
+                                                        class="btn btn-sm btn-outline-primary"
+                                                        data-bs-toggle="modal"
+                                                        data-bs-target="#os24Modal">View Materials</button>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
 
-                                    <div class="col">
-                                        <div class="card h-100">
-                                            <div class="card-body">
-                                                <h5 class="card-title">Opensource SW Project</h5>
-                                                <p class="card-text">Understanding of open source software and hands-on practice
-                                                    with tools for open source development, including Linux, Docker, Django, and
-                                                    Git, culminating in a team-based project.</p>
-                                                <button
-                                                    class="btn btn-sm btn-outline-primary"
-                                                    data-bs-toggle="modal"
-                                                    data-bs-target="#openswpr24Modal">View Materials</button>
+                                        <div class="col">
+                                            <div class="card h-100">
+                                                <div class="card-body">
+                                                    <h5 class="card-title">Opensource SW Project</h5>
+                                                    <p class="card-text">Understanding of open source software and hands-on practice
+                                                        with tools for open source development, including Linux, Docker, Django, and
+                                                        Git, culminating in a team-based project.</p>
+                                                    <button
+                                                        class="btn btn-sm btn-outline-primary"
+                                                        data-bs-toggle="modal"
+                                                        data-bs-target="#openswpr24Modal">View Materials</button>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
 
-                                    <div class="col">
-                                        <div class="card h-100">
-                                            <div class="card-body">
-                                                <h5 class="card-title">Java Programming</h5>
-                                                <p class="card-text">Understanding of the Java programming language and
-                                                    practical programming exercises using Java.</p>
-                                                <button
-                                                    class="btn btn-sm btn-outline-primary"
-                                                    data-bs-toggle="modal"
-                                                    data-bs-target="#java25Modal">View Materials</button>
+                                        <div class="col">
+                                            <div class="card h-100">
+                                                <div class="card-body">
+                                                    <h5 class="card-title">Java Programming</h5>
+                                                    <p class="card-text">Understanding of the Java programming language and
+                                                        practical programming exercises using Java.</p>
+                                                    <button
+                                                        class="btn btn-sm btn-outline-primary"
+                                                        data-bs-toggle="modal"
+                                                        data-bs-target="#java25Modal">View Materials</button>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="col">
-                                        <div class="card h-100">
-                                            <div class="card-body">
-                                                <h5 class="card-title">C Programming 2</h5>
-                                                <p class="card-text">Understanding of the C programming language and practical
-                                                    programming exercises using C.</p>
-                                                <button
-                                                    class="btn btn-sm btn-outline-primary"
-                                                    data-bs-toggle="modal"
-                                                    data-bs-target="#c24Modal">View Materials</button>
+                                        <div class="col">
+                                            <div class="card h-100">
+                                                <div class="card-body">
+                                                    <h5 class="card-title">C Programming 2</h5>
+                                                    <p class="card-text">Understanding of the C programming language and practical
+                                                        programming exercises using C.</p>
+                                                    <button
+                                                        class="btn btn-sm btn-outline-primary"
+                                                        data-bs-toggle="modal"
+                                                        data-bs-target="#c24Modal">View Materials</button>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
 
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
+                
+
+
+                <div class="col-md-4">
+                    <div id="sidebar-placeholder"></div>
+                </div>
             </div>
-        </div>
 
-    </div>
-    <div class="col-md-4">
-        <div id="sidebar-placeholder"></div>
-    </div>
-</div>
-</main>
-<div id="web25-modal-placeholder"></div>
-<div id="java25-modal-placeholder"></div>
-<div id="seminar25-modal-placeholder"></div>
-<div id="opensw25-modal-placeholder"></div>
-<div id="cloud25-modal-placeholder"></div>
-<div id="footer-placeholder"></div>
 
-</body>
-<script src="/assets/dist/js/bootstrap.bundle.min.js"></script>
-<script src="/assets/js/index.js"></script>
-<script src="/assets/js/lecture_base.js"></script>
+            </main>
 
-</html>
+            <div id="web25-modal-placeholder"></div>
+            <div id="java25-modal-placeholder"></div>
+            <div id="seminar25-modal-placeholder"></div>
+            <div id="opensw25-modal-placeholder"></div>
+            <div id="cloud25-modal-placeholder"></div>
+            <div id="footer-placeholder"></div>
+
+            <script src="/assets/dist/js/bootstrap.bundle.min.js"></script>
+            <script src="/assets/js/index.js"></script>
+            <script src="/assets/js/lecture_base.js"></script>
+
+        </body>
+
+    </html>
