--- a/lecture/index.html
+++ b/lecture/index.html
@@ -229,11 +229,12 @@
                                         <div class="col">
                                             <div class="card h-100">
                                                 <div class="card-body">
-                                                    <h5 class="card-title">Introduction to Artificial Intelligence</h5>
+                                                    <h5 class="card-title">Artificial Intelligence</h5>
                                                     <p class="card-text">Understanding of classical artificial intelligence
-                                                        concepts, along with hands-on practice and theoretical study of deep neural
-                                                        networks (DNN), convolutional neural networks (CNN), long short-term memory
-                                                        (LSTM), and transformer architectures.</p>
+                                                        concepts, along with hands-on practice(colab and kaggle competition) 
+                                                        and theoretical study of deep neural networks(DNN), 
+                                                        convolutional neural networks(CNN), long short-term memory(LSTM), 
+                                                        and transformer architectures.</p>
                                                     <button
                                                         class="btn btn-sm btn-outline-primary"
                                                         data-bs-toggle="modal"
